--- a/index.html
+++ b/index.html
@@ -229,8 +229,21 @@
         </div>
       </div>
     </div>
-
-    <div style="height: 1999px"></div>
+    <div class="footer">
+        <div>
+      <img src="./logo.jpg" alt="" />
+        </div>
+      <div>
+        <span>Support</span>
+        <span>Terms & Conditions</span>
+        <span>About Us</span>
+        <span>Return & Refund Policy</span>
+        <span>Privacy Policy</span>
+        <span>Shipping & Delivery Policy</span>
+      </div>
+      <div style="width:100%;"></div>
+      <p>Sea Basket | All Rights Reserved | 2022 Copyright</p>
+    </div>
     <script src="./collapsable.js"></script>
   </body>
 </html>
