--- a/index.html
+++ b/index.html
@@ -35,24 +35,9 @@
     </div>
     <div class="categories">
       <h1 class="heading">Categories</h1>
-      <div class="cards">
-        <div>
-          <img src="./logo.jpg" alt="" />
-          <p>klavaro2</p>
-        </div>
-        <div>
-          <img src="./logo.jpg" alt="" />
-          <p>klavaro2</p>
-        </div>
-        <div>
-          <img src="./logo.jpg" alt="" />
-          <p>klavaro2</p>
-        </div>
-        <div>
-          <img src="./logo.jpg" alt="" />
-          <p>klavaro2</p>
-        </div>
-      </div>
+      <div class="cards" id="category-card"></div>
+<div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+      <button>Show More</button>
     </div>
     <div class="glance-at-product">
       <h1 class="heading">A GLANCE AT OUR PRODUCT</h1>
@@ -230,9 +215,9 @@
       </div>
     </div>
     <div class="footer">
-        <div>
-      <img src="./logo.jpg" alt="" />
-        </div>
+      <div>
+        <img src="./logo.jpg" alt="" />
+      </div>
       <div>
         <span>Support</span>
         <span>Terms & Conditions</span>
@@ -241,9 +226,10 @@
         <span>Privacy Policy</span>
         <span>Shipping & Delivery Policy</span>
       </div>
-      <div style="width:100%;"></div>
+      <div style="width: 100%"></div>
       <p>Sea Basket | All Rights Reserved | 2022 Copyright</p>
     </div>
     <script src="./collapsable.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
